Fixed word wrapping issues

--- a/wdd230/lesson9/css/prophets.css
+++ b/wdd230/lesson9/css/prophets.css
@@ -26,7 +26,7 @@ div.cards {
   display: grid;
   gap: 0.25rem;
   margin: 0 auto;
-  max-width: 13rem;
+  max-width: 15rem;
 }
 
 section {
@@ -63,13 +63,13 @@ footer {
 @media only screen and (min-width: 32.5em) {
   div.cards {
     grid-template-columns: 1fr 1fr;
-    max-width: 26.5rem;
+    max-width: 30rem;
   }
 }
 
 @media only screen and (min-width: 60em) {
   div.cards {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    max-width: 52.5rem;
+    max-width: 60rem;
   }
 }
